package DesignPatterns.FactoryDemo.SimpleFactoryDemo;

public interface TestObject {
    void run();
}
