@startuml
'https://plantuml.com/class-diagram

interface TestObject
class TestObjectSimpleFactory
class ChildObjectOne implements TestObject
class ChildObjectTwo implements TestObject
class client


namespace producer {
    TestObject <|-- TestObjectSimpleFactory
    ChildObjectOne <|-- TestObjectSimpleFactory
    ChildObjectTwo <|-- TestObjectSimpleFactory
    TestObject <|-- ChildObjectOne
    TestObject <|-- ChildObjectTwo

    TestObject : run()
    ChildObjectOne : run()
    ChildObjectTwo : run()
}

client <|-- producer.TestObjectSimpleFactory
client <|-- producer.TestObject




@enduml